2000-11-22  Max Horn  <max@quendi.de>

	* added a lot of C++ std namespace code
	* moved mac port to use CodeWarrior Pro 6 

2000-11-22  Tristan Tarrant <nadir@users.sourceforge.net>

	* data/extras.shp, data/midi_conversion.shp, data/sfx_conversion.shp: 
	  new shapes
	* data/Makefile.am, tools/expack.cc, data/README,
	  Makefile.cygwin, Makefile.win32, Makefile.be: update all
	  known references to shape list for exult.flx...
	* game.cc: use new shapes

2000-11-22  Jeff Freedman  <jeff@amy.nerble.net>

	* usecode.cc:  0x58 in scheduled uc means 'play sound effect'.

2000-11-20  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* usecode.cc/h, useval.cc/h: added pointer type to Usecode_value

2000-11-20  Tristan Tarrant <nadir@users.sourceforge.net>

	* data/play_1st_scene.shp, data/exit.shp: 2 new shapes
	* data/Makefile.am, tools/expack.cc, data/README,
	  Makefile.cygwin, Makefile.win32, Makefile.be: update all
	  known references to shape list for exult.flx...
	* exult.cc, game.cc: handle extra menu entries
	* README: updated with more information

2000-11-20  Tristan Tarrant <nadir@users.sourceforge.net>

	* configure.in: check if Gnome is installed
	* Makefile.am: add desktop dir
	* desktop/*: Gnome desktop entry and icon

2000-11-17  Max Horn  <max@quendi.de>

	* exult.cc, menulist.cc: Added Cmd-Q which quits exult (MacOS only)
	* gamewin.cc: fixes (crashing) bug realted to Game_window::init_faces() / face_info
	* fixed Makefile.[win32|cygwin|be]

2000-11-17  Tristan Tarrant <nadir@users.sourceforge.net>

	* exult.cc: Game_window::splash is not needed now, so I've
	removed the check in Handle_events. 

2000-11-17  Tristan Tarrant <nadir@users.sourceforge.net>

	* menulist.cc, game.cc: handle events better

2000-11-17  Jeff Freedman  <jeff@amy.nerble.net>

	* Use vector::iterators instead of going through indices.

2000-11-16  Tristan Tarrant <nadir@users.sourceforge.net>

	* files/databuf: Implemented an ExultDataSource which encapsulates